# zipios

./: CMakeLists.txt
cmake/: Toolchain-Ubuntu-mingw32.cmake  Toolchain-Ubuntu-mingw64.cmake
src/: CMakeLists.txt  directorycollection.cpp  filepath.cpp  gzipoutputstream.cpp  zipinputstreambuf.cpp  zipios_common.hpp  zipoutputstream.cpp
tests/: CMakeLists.txt  common.cpp  directory_helper.cpp  directorycollection.cpp  directoryentry.cpp  dostime.cpp  filepath.cpp  raii_helper.cpp  stream.cpp  tests.cpp  tests.hpp  virtualseeker.cpp  zipfile.cpp
tools/: CMakeLists.txt  appendzip.cpp
zipios/: directorycollection.hpp  zipios-config.hpp.in
